08-jan-2010 - rheiny - Win32 - Trace Logger - Trace logger now logs the values of the stack pointer register
31-dec-2009 - prg318 - added gtk gui
08-dec-2009 - Zeromus - Fix Name Table Viewer - Fix for use with New PPU
08-dec-2009 - - mart0258 - FDS - show name of missing bios file in error message
07-dec-2009 - qeed - NewPPU - fixed sprite hit before 255 and for non transparent hits only, thanks to dwedit for providing the fix
06-dec-2009 - Zeromus - SDL - disallow --inputcfg gamepad0 and gamepad5
??-???-2009 - CaH4e3 - fixed mappers 82, 25, 21, and 18.  Games such as SD Kiji Blader, Ganbare Goemon Gaiden, and Ganbare Goemon Gaiden 2, Jajamaru Gekimadden are now playable
17-nov-2009 - adelikat - Win32 - Cheats - Pause while active checkbox installed
17-nov-2009 - adelikat - Win32 - Fix debug window so it doesn't crash if unminimized with no game loaded.
13-nov-2009 - mart0258 - Win32 - TASEdit - Added interface functionality (save/load, running TASEdit mid-movie, etc.)
13-nov-2009 - adelikat - made savestate compression togglable
13-nov-2009 - adelikat - made savestate backups togglable
08-nov-2009 - gocha - Win32 - Lua console - added a menu
08-nov-2009 - gocha - change gui.line, gui.box, joypad.get to function like GENS rerecording
08-nov-2009 - gocha - New lua functions: gui.parsecolor, joypad.getup, joypad.getdown, emu.emulating.
08-nov-2009 - CaH4e3 - Fixes for mappers 253 & 226 - fixes games such as Fire Emblem (J) and Fire Emblem Gaiden (J)
08-nov-2009 - CaH4e3 - Fix crashing on game loading for any battery backed roms with mappers from MapInitTab (fixes Esper Dream 2 - Aratanaru Tatakai (J) 
04-nov-2009 - adelikat - win32 - debugger - added an auto-load feature

---r1527 - FCEUX 2.1.2 Released---
---November 3, 2009---
